WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76642
Implicit creation of a regular expression should eagerly check for syntax errors
https://bugs.webkit.org/show_bug.cgi?id=76642
Summary
Implicit creation of a regular expression should eagerly check for syntax errors
Geoffrey Garen
Reported
2012-01-19 10:39:06 PST
Implicit creation of a regular expression should eagerly check for syntax errors
Attachments
Patch
(10.07 KB, patch)
2012-01-19 11:07 PST
,
Geoffrey Garen
oliver
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-01-19 11:07:55 PST
Created
attachment 123152
[details]
Patch
Oliver Hunt
Comment 2
2012-01-19 11:25:16 PST
Comment on
attachment 123152
[details]
Patch r=me
WebKit Review Bot
Comment 3
2012-01-19 13:03:26 PST
Comment on
attachment 123152
[details]
Patch
Attachment 123152
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11298184
New failing tests: fast/regex/syntax-errors.html
Geoffrey Garen
Comment 4
2012-01-19 13:57:18 PST
Committed
r105444
: <
http://trac.webkit.org/changeset/105444
>
Alexey Shvayka
Comment 5
2024-02-05 16:13:59 PST
***
Bug 15450
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug