LayoutTests/fast/js/script-tests/code-serialize-paren.js
@@ -2,4 +2,4 @@ description(
 "This test checks whether converting function code to a string preserves semantically significant parentheses."
 )
 
-shouldBeTrue("(function () { return (x + y) * z; }).toString().search('return.*\\(') < 0");
+shouldBeTrue("(function () { return (x + y) * z; }).toString().search('return.*[(]') != -1");
